--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 		<link rel="stylesheet" href="css/bootstrap.css">
 	</head>
 	<body>
-		<h1>Hello, world!</h1>
+		<h1>Hello, world! </h1>
+		<p>
+			TIME TO HUE TOGETHER LADIES AND GENTLEHAN
+		</p>
+	<p>
+		YOUNG AFRICAN MALE, YOUR COOKING SKILLS IS WEAK, OHHHHHHHHHHHHHHHHHHHHHHHHH!!!!
+		</p>
 
 		<!--This is how you import javascript, a file containing functions to be used on your page-->
 				<script src="js/utils.js"></script>
